# halal-koperasi-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: audit_checklist.json
data/koperasi_profiles/: index.json  kmbj.yaml  kpnl.yaml  kspt.yaml
data/regulation_texts/: BPJPH_1_2023.txt  BPJPH_2_2023.txt  KOMINFO_9_2023.txt  LPH_PANDUAN.txt  MUI_FATWA.txt  PP_39_2021.txt  SNI_HALAL.txt  UU_33_2014.txt
data/templates/: akta_pendirian.md.j2  anggaran_dasar.md.j2  bukti_pelatihan_has.md.j2  daftar_bahan_baku.md.j2  izin_usaha.md.j2  layout_fasilitas.md.j2  nib.md.j2  npwp.md.j2  organogram_has.md.j2  rute_produksi.md.j2  sertifikat_halal_bahan.md.j2  sop_produksi.md.j2
docs/: LAPORAN_UAS.md  PRESENTASI_UAS.md  PRESENTASI_UAS.pptx
scripts/: download_regulations.py  generate_presentation.py  generate_regulation_placeholders.py  generate_synthetic_docs.py  ingest_regulations.py  md_to_pdf_simple.py  run_eval.py
src/halal_koperasi_agent/: __init__.py  cli.py  config.py  graph.py  llm_providers.py  state.py  vector_store.py
src/halal_koperasi_agent/agents/: audit_simulation.py  communication.py  decision_recommendation.py  document_intake.py  regulatory_rag.py
src/halal_koperasi_agent/schemas/: __init__.py  application.py  audit.py  communication.py  documents.py  regulatory.py
src/halal_koperasi_agent/utils/: __init__.py
tests/: test_agents.py
