[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halal-koperasi-agent"
version = "1.0.0"
description = "Multi-Agent LLM System for Halal Certification Readiness of Indonesian Cooperatives"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "UAS Proyek Data Mining Team", email = "team@amikom.ac.id"}
]
requires-python = ">=3.11"
dependencies = [
    # Core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",

    # NVIDIA NIM (Primary - Only Provider)
    "langchain-nvidia-ai-endpoints>=0.1.0",

    # Vector DB
    "chromadb>=0.5.0",

    # Document Processing
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.2",
    "paddleocr>=2.8.0",
    "pillow>=10.0.0",

    # Data Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.6",

    # RAG & Evaluation
    "ragas>=0.2.0",
    "rank-bm25>=0.2.2",

    # Reporting
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",

    # CLI & Config
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.13.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "black>=24.4.0",
    "isort>=5.13.0",
]
ui = [
    "streamlit>=1.35.0",
    "streamlit-option-menu>=0.3.0",
]
finetune = [
    "unsloth[colab-new]>=2024.12",
    "trl>=0.9.0",
    "peft>=0.11.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
]
eval = [
    "deepeval>=1.0.0",
    "langsmith>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20", "PIE"]
ignore = ["E501", "S101", "T201"]
extend-select = ["ARG", "PTH", "ERA", "PD", "PL", "TRY", "NPY", "RSE", "RET", "FURB"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src/halal_koperasi_agent"]
omit = ["*/tests/*", "*/scripts/*", "*/app/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]